--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,50 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context="com.example.administrator.myapplication.MainActivity">
+    <Button
+        android:layout_width="@dimen/button_width"
+        android:layout_height="wrap_content"
+        android:id="@+id/button_1"
+        android:text="@string/button_1"
+        />
+    <Button
+        android:layout_width="@dimen/button_width"
+        android:layout_height="wrap_content"
+        android:id="@+id/button_2"
+        android:layout_below="@id/button_1"
+        android:text="@string/button_2"
+        />
+    <Button
+        android:layout_width="@dimen/button_width"
+        android:layout_height="wrap_content"
+        android:id="@+id/button_3"
+        android:layout_below="@id/button_2"
+        android:text="@string/button_3"
+        />
+    <Button
+        android:layout_width="@dimen/button_width"
+        android:layout_height="wrap_content"
+        android:id="@+id/button_4"
+        android:layout_below="@id/button_3"
+        android:text="@string/button_4"
+        />
 
-   <TextView
-       android:layout_width="100dip"
-       android:layout_height="100dip"
-       android:id="@+id/lefttop"
-       android:layout_gravity="left|top"
-       android:background="@color/colorPrimary"/>
 
-    <TextView
-        android:layout_width="100dip"
-        android:layout_height="100dip"
-        android:id="@+id/leftbottom"
-        android:layout_gravity="left|bottom"
-        android:background="@color/colorPrimary"/>
-
-    <TextView
-        android:layout_width="100dip"
-        android:layout_height="100dip"
-        android:id="@+id/center1"
-        android:layout_gravity="center"
-        android:background="@color/colorPrimary"/>
-    <TextView
-        android:layout_width="100dip"
-        android:layout_height="100dip"
-        android:id="@+id/righttop"
-        android:layout_gravity="right|top"
-        android:background="@color/colorPrimary"/>
-    <TextView
-        android:layout_width="100dip"
-        android:layout_height="100dip"
-        android:id="@+id/rightbottom"
-        android:layout_gravity="right|bottom"
-        android:background="@color/colorPrimary"/>
-
-    <TextView
-        android:layout_width="50dip"
-        android:layout_height="50dip"
-        android:id="@+id/center2"
-        android:layout_gravity="center"
-        android:background="@color/colorPrimaryDark"/>
-
-</FrameLayout>
+</RelativeLayout>
