--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,6 +2,7 @@
 <resources>
     <dimen name="left_distance">35dp</dimen>
     <dimen name="top_distance">10dp</dimen>
+    <dimen name="button_width">150dp</dimen>
     <dimen name="text_width">100dp</dimen>
     <dimen name="text_height">50dp</dimen>
 </resources>
